--- a/css/cmapp.css
+++ b/css/cmapp.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,.6);
+  background: rgba(0,0,0,.95);
   opacity: 0;
   pointer-events: none;
   transition: all 300ms ease-in-out;
@@ -25,14 +25,14 @@
 
 .modal-container .modal{
   position: absolute;
-  width: 300px;
-  height: auto;
+  width: 603px;
+  height: 335px;
   top: 50%;
   left: 50%;
-  margin-left: -150px;
-  margin-top: -50px;
-  background: #111;
-  box-shadow: 0 10px 10px rgba(0,0,0,.5);
+  margin-left: -301px;
+  margin-top: 0px;
+  background: url('../images/newsletter.png') no-repeat;
+  box-shadow: 0 10px 24px 0 rgba(0, 0, 0, 0.4);
   transform: translate(0px, 50px);
   -webkit-transform: translate(0px, 50px);
   transition: all 500ms cubic-bezier(0.25, 0.35, 0, 1.74);
@@ -42,7 +42,7 @@
 .modal-container .modal .close-button{
   position: absolute;
   left:100%;
-  bottom:100%;
+  bottom:74%;
   margin-left:-20px;
   margin-bottom:10px;
   width:24px;
@@ -59,16 +59,10 @@
 
 .modal-container .modal img{
   display: block;
+  position: absolute;
+  bottom: 10%;
+  right: 8%;
   margin: 0 auto;
-  padding: 15px;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-name: pulse;
-  animation-name: pulse;
-  -webkit-animation-iteration-count: 2;
-  animation-iteration-count: 2;
 }
 
 .modal-open .modal-container {
@@ -77,5 +71,5 @@
 }
 
 .modal-open .modal-container .modal {
-  margin-top: -150px; 
+  margin-top: -250px; 
 }
