--- a/css/cmapp.css
+++ b/css/cmapp.css
@@ -25,13 +25,13 @@
 
 .modal-container .modal{
   position: absolute;
-  width: 603px;
-  height: 335px;
+  width: 282px;
+  height: 307px;
   top: 50%;
   left: 50%;
-  margin-left: -301px;
+  margin-left: -141px;
   margin-top: 0px;
-  background: url('../images/newsletter.png') no-repeat;
+  background: url('../images/newslette2r.png') no-repeat;
   box-shadow: 0 10px 24px 0 rgba(0, 0, 0, 0.4);
   transform: translate(0px, 50px);
   -webkit-transform: translate(0px, 50px);
@@ -42,7 +42,7 @@
 .modal-container .modal .close-button{
   position: absolute;
   left:100%;
-  bottom:74%;
+  bottom:100%;
   margin-left:-20px;
   margin-bottom:10px;
   width:24px;
@@ -52,17 +52,19 @@
   transition: all 100ms ease-in-out;
 }
 
+.modal-container .modal img:hover,
 .modal-container .modal .close-button:hover{
   transform: scale(1.1);
-  -webkit-transform: scale(1.2)
+  -webkit-transform: scale(1.1)
 }
 
 .modal-container .modal img{
   display: block;
   position: absolute;
-  bottom: 10%;
-  right: 8%;
+  top: 5%;
+  left: 20%;
   margin: 0 auto;
+  transition: all 300ms ease-in-out;
 }
 
 .modal-open .modal-container {
@@ -71,5 +73,12 @@
 }
 
 .modal-open .modal-container .modal {
-  margin-top: -250px; 
+  margin-top: -200px; 
+}
+
+@media (min-width: 750px) {
+  .modal-container .modal{
+    width: 603px; height: 335px; margin-left: -301px; margin-top: 0px; background: url('../images/newsletter.png') no-repeat;}
+  .modal-container .modal .close-button{ bottom:74%; margin-left:-20px; margin-bottom:10px;}
+  .modal-container .modal img{ top: 72%; left: 41%;}
 }
